tests/chapter_15/invalid_types/sub_ptr_from_int.c
int main(void)
{
    int *x = 0;
    // can't subtract a pointer from an integer
    // Note that 0 is NOT implicitly converted to a pointer here
    return 0 - x == 0;
}